data/derived/fa15/progs/unify/prog2353.ml.out
Characters 29-30:
  let f a x = a a x in
                ^
Error: This expression has type 'a -> 'b -> 'c
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'b -> 'c
